--- a/resources/sass/includes/_forms.scss
+++ b/resources/sass/includes/_forms.scss
@@ -197,9 +197,137 @@ select:-webkit-autofill:focus {
     background-color: $mpurple;
 }
 
-input.money {
-    &::before {
-        content: '$';
+body, .profile-info, .profile-info .pinfo-left, .profile-info .pinfo-full {
+    .checky-group {
+        display: flex;
+        flex-wrap: wrap;
+
+        label.checky {
+            display: flex;
+            flex-basis: 100%;
+            flex-grow: 0;
+            flex-shrink: 0;
+            align-items: center;
+            box-sizing: border-box;
+
+            span {
+                margin-left: .25em;
+                font-size: 20px;
+                line-height: 22.5px;
+            }
+
+            input[type=checkbox],
+            input[type=radio] {
+                width: 40px; height: 40px;
+                border: 3px solid $lpurple;
+                border-top-width: 1px;
+                border-left-width: 1px;
+                padding: 0;
+                flex-shrink: 0;
+                flex-grow: 0;
+
+                &:checked,
+                &:focus {
+                    border-color: $dpurple;
+                    outline: 0;
+                }
+
+                &:checked {
+                    position: relative;
+                    &:before {
+                        content: '\2713';
+                        position: absolute;
+                        top: -8px; bottom: 3px;
+                        left: 0; right: -5px;
+                        font-size: 50px;
+                        line-height: 45px;
+                        text-align: center;
+                        font-family: Helvetica, Arial, sans-serif;
+                        color: $orange;
+                    }
+                }
+            }
+        }
+        &.columns {
+            justify-content: left;
+
+            label {
+                flex-basis: 33.333%;
+                width: auto;
+                padding-right: 30px;
+                flex-grow: 0;
+
+                @media screen and (max-width: 800px) {
+                    flex-basis: 50%;
+                }
+                @media screen and (max-width: 600px) {
+                    flex-basis: 100%;
+                }
+            }
+        }
+        &.inline {
+            justify-content: left;
+            text-align: center;
+
+            &.centered {
+                justify-content: center;
+            }
+
+            label {
+                width: 100px;
+                flex-grow: 0;
+                flex-shrink: 0;
+
+                input[type=checkbox],
+                input[type=radio] {
+
+                }
+
+                span {
+                    display: block;
+                    margin-left: 0;
+                    font-size: inherit;
+                    line-height: 1.1;
+                }
+            }
+        }
     }
-    padding-left: 2em;
+
+    .money-wrapper {
+        width: 100%;
+        height: 50px;
+        display: flex;
+        border:solid 3px $lpurple;
+        border-top: solid 1px $lpurple;
+        border-left:solid 1px $lpurple;
+        line-height: 40px;
+        color: $gray;
+        box-sizing:border-box;
+        font-size: 1em;
+        font-family:$pfont;
+        padding-left:10px;
+
+        &::before {
+            content: '$';
+            line-height: 1;
+            align-self: center;
+            margin-right: .25em;
+        }
+        input.money {
+            padding: 0 !important; margin: 0 !important;
+            border: 0 !important;
+            width: auto !important; height: auto !important;
+            flex-grow: 1;
+
+            &:focus {
+                border: 0;
+                outline: 0;
+            }
+        }
+
+        &:focus {
+            border-color: $dpurple;
+            outline: none;
+        }
+    }
 }
