✨ Add Users table for admins

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,7 @@
 @import 'includes/trumbowyg';
 @import 'includes/jquery-ui/themes/base/datepicker';
 @import '~starrr/src/starrr';
+@import 'includes/datatables/theme';
 
 // Hammer
 @import 'includes/hammer';
