--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11418,6 +11418,7 @@ body.admin .search.admin-user .active-wrapper:after {
   background-image: none;
   width: 9px;
   height: 9px;
+  z-index: 2;
 }
 
 body.admin .search.admin-user .date-wrapper label,
