--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4341,12 +4341,7 @@ body.main .search .dash-search-wrapper {
   display: flex;
   -webkit-box-pack: justify;
           justify-content: space-between;
-}
-
-@media screen and (max-width: 600px) {
-  body.main .search .dash-search-wrapper {
-    display: block;
-  }
+  flex-wrap: wrap;
 }
 
 body.main .search .dash-search-wrapper input {
@@ -4404,6 +4399,33 @@ body.main .search .dash-search-wrapper input:focus {
   border-left: solid 1px #bcb0c4;
 }
 
+body.main .search .number-wrapper,
+body.main .search .date-wrapper,
+body.main .search .location-wrapper,
+body.main .search .rate-wrapper,
+body.main .search .current-location-wrapper {
+  position: relative;
+  width: 32%;
+  -webkit-box-flex: 0;
+          flex-grow: 0;
+  flex-shrink: 0;
+  height: 50px;
+  margin-top: 2%;
+}
+
+@media screen and (max-width: 600px) {
+  body.main .search .number-wrapper,
+  body.main .search .date-wrapper,
+  body.main .search .rate-wrapper {
+    width: 100%;
+  }
+
+  body.main .search .location-wrapper,
+  body.main .search .current-location-wrapper {
+    width: 49%;
+  }
+}
+
 body.main .search select {
   height: 50px;
   border: solid 3px white;
@@ -4442,10 +4464,7 @@ body.main .search select:focus {
 }
 
 body.main .search .number-wrapper {
-  position: relative;
-  height: 50px;
-  width: 32%;
-  z-index: 1000;
+  z-index: 99;
 }
 
 body.main .search .number-wrapper:after {
@@ -4464,12 +4483,10 @@ body.main .search .number-wrapper:after {
 }
 
 body.main .search .rate-wrapper {
-  position: relative;
-  height: 50px;
-  width: 32%;
+  z-index: 98;
 }
 
-body.main .search .rate-wrapper:after {
+body.main .search .rate-wrapper::after {
   content: "";
   background-image: url(/images/rate.svg?161cdef454d3e3fddcf1ec8e01ab6ebf);
   background-size: cover;
@@ -4484,9 +4501,7 @@ body.main .search .rate-wrapper:after {
 }
 
 body.main .search .date-wrapper {
-  position: relative;
-  height: 50px;
-  width: 32%;
+  z-index: 100;
 }
 
 body.main .search .date-wrapper::after {
@@ -4501,14 +4516,6 @@ body.main .search .date-wrapper::after {
   right: 20px;
   color: #f4ba46;
   pointer-events: none;
-}
-
-body.main .search .location-wrapper {
-  position: relative;
-  height: 50px;
-  width: 66%;
-  margin-top: 2%;
-  float: left;
 }
 
 body.main .search .location-wrapper input {
@@ -4540,7 +4547,7 @@ body.main .search .location-wrapper input::placeholder {
   color: white;
 }
 
-body.main .search .location-wrapper:after {
+body.main .search .location-wrapper::after {
   content: "";
   background-image: url(/images/location.svg?835cfca5e66b2afa958d0e1b35797ff8);
   background-size: cover;
@@ -4554,15 +4561,61 @@ body.main .search .location-wrapper:after {
   pointer-events: none;
 }
 
+body.main .search .current-location-wrapper p {
+  margin: 0;
+  text-align: left;
+  color: white;
+  line-height: 50px;
+  font-size: 0.9rem;
+  font-style: italic;
+}
+
+body.main .search .current-location-wrapper p::before {
+  content: "or ";
+}
+
+@media screen and (max-width: 600px) {
+  body.main .search .current-location-wrapper p {
+    line-height: 1;
+    text-align: center;
+  }
+
+  body.main .search .current-location-wrapper p::before {
+    display: none;
+  }
+
+  body.main .search .current-location-wrapper a {
+    display: block;
+    width: 100%;
+    color: white;
+    border: 3px solid white;
+    border-top-width: 1px;
+    border-left-width: 1px;
+    background-color: transparent;
+    font-size: 0.875em;
+    text-transform: uppercase;
+    border-radius: 25px;
+    font-weight: bold;
+    font-family: "brandon-grotesque", sans-serif;
+    line-height: 44px;
+    box-sizing: border-box;
+    -webkit-transition: all 250ms ease-in-out;
+    transition: all 250ms ease-in-out;
+    font-style: normal;
+  }
+}
+
 body.main .search button.search-submit {
-  margin-top: 2%;
   width: 32%;
+  margin-top: 2%;
+  -webkit-box-flex: 0;
+          flex-grow: 0;
+  flex-shrink: 0;
   border: solid 3px #bcb0c4;
   border-top: solid 1px #bcb0c4;
   border-left: solid 1px #bcb0c4;
   background-color: #bcb0c4;
   color: white;
-  margin-left: 2%;
   -webkit-transition: all 250ms ease-in-out;
   transition: all 250ms ease-in-out;
   font-size: 0.875em;
@@ -4576,6 +4629,10 @@ body.main .search button.search-submit {
 @media screen and (max-width: 600px) {
   body.main .search button.search-submit {
     width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    float: none;
   }
 }
 
@@ -4584,19 +4641,6 @@ body.main .search button:hover {
   border: solid 3px #f4ba46;
   border-top: solid 1px #f4ba46;
   border-left: solid 1px #f4ba46;
-}
-
-@media screen and (max-width: 600px) {
-  body.main .search .selectwrap {
-    margin-top: 2%;
-    width: 100%;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  body.main .search .location-wrapper.selectwrap {
-    margin-top: 2%;
-  }
 }
 
 @media screen and (max-width: 600px) {
@@ -4689,6 +4733,10 @@ body.main .content .dash-container {
   body.main .content .dash-container {
     flex-wrap: wrap;
   }
+}
+
+body.main .content.overlaybox {
+  background-color: rgba(31, 24, 68, 0.8);
 }
 
 body.main .content .left-dash {
@@ -6184,7 +6232,7 @@ body.main .content .chat .typehere button:focus {
 
 .booking.search .booking-search-wrapper label {
   color: white;
-  margin-bottom: 1%;
+  display: block;
 }
 
 .bookings .sortby {
@@ -11424,7 +11472,7 @@ body.admin .search.admin-user .active-wrapper:after {
 body.admin .search.admin-user .date-wrapper label,
 body.admin .search.admin-user .type-wrapper label,
 body.admin .search.admin-user .active-wrapper label {
-  opacity: 0;
+  display: block;
 }
 
 @media screen and (max-width: 750px) {
@@ -11503,6 +11551,15 @@ body.admin .search.admin-user .add-invoice-contain .add-invoice h6 {
 
 body.admin .search.admin-user .add-invoice-contain .add-invoice:focus {
   outline: none;
+}
+
+body.admin .search.admin-user .add-invoice-contain:hover .add-invoice {
+  color: white;
+  background: #f4ba46;
+}
+
+body.admin .search.admin-user .add-invoice-contain:hover .add-invoice h6 {
+  opacity: 1;
 }
 
 body.admin .admin-user.sitter-search {
@@ -11889,14 +11946,16 @@ body.admin .admin-user.overlay2 .overlaybox-content .btn-container {
   margin: 2% auto;
 }
 
-body.admin .admin-user.savechanges img {
+body.admin .admin-user.savechanges img,
+body.admin .admin-user.resetpassword img {
   width: 100px;
   display: block;
   margin: auto;
   margin-bottom: 20px;
 }
 
-body.admin .admin-user.savechanges .btn-container {
+body.admin .admin-user.savechanges .btn-container,
+body.admin .admin-user.resetpassword .btn-container {
   text-align: right;
   margin: 2% auto;
 }
